[gd_scene load_steps=3 format=3 uid="uid://dbuwnm3lwqak2"]

[ext_resource type="Texture2D" uid="uid://dy0v440b4igat" path="res://assets/textures/icons/ui/minimap_ring_brown_detail.png" id="1_dfqt4"]
[ext_resource type="Script" path="res://scripts/ui/minimap.gd" id="1_fqsw8"]

[node name="Minimap" type="CanvasLayer"]
script = ExtResource("1_fqsw8")

[node name="MinimapContainer" type="PanelContainer" parent="."]
clip_children = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 320.0
grow_horizontal = 0
pivot_offset = Vector2(150, 150)

[node name="ViewportContainer" type="SubViewportContainer" parent="MinimapContainer"]
layout_mode = 2
stretch = true

[node name="MinimapViewport" type="SubViewport" parent="MinimapContainer/ViewportContainer"]
handle_input_locally = false
size = Vector2i(300, 300)
render_target_update_mode = 4

[node name="MinimapCamera" type="Camera3D" parent="MinimapContainer/ViewportContainer/MinimapViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 20, 0)
cull_mask = 2
projection = 1

[node name="MinimapFrame" type="TextureRect" parent="MinimapContainer"]
layout_mode = 2
texture = ExtResource("1_dfqt4")
